--- a/demo/index.html
+++ b/demo/index.html
@@ -9,6 +9,6 @@
     <h1>Gabriela Simoes</h1>
     <p>Hello, and welcome to the interwebz!</p>
     <p>This is another paragraph</p> 
-
+<h2>Second level heading</h2>
 </body>
 </html>
