--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -6,6 +6,10 @@
     <title>HTML Assignment</title>
 </head>
 <body>
-    
+    <h1>Gabriela Simoes</h1>
+    <article>
+        <h2>About Me</h2>
+        <p1></p1>
+    </article>
 </body>
 </html>
