add first paragraph

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -9,7 +9,8 @@
     <h1>Gabriela Simoes</h1>
     <article>
         <h2>About Me</h2>
-        <p1></p1>
+            <p1>My name is Gabriela, but I prefer to be called Gabi. I'm 27 years old and this is my second graduation. My previous university was in Brazil, my home country, and where I was born and lived until a month ago, my first program at university was Architecture and Urban Planning. I also did a post-graduate program in Interior Design.</p1>
+            
     </article>
 </body>
 </html>
