--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -9,9 +9,9 @@
     <h1>Gabriela Simoes</h1>
     <article>
         <h2>About Me</h2>
-            <p1>My name is Gabriela, but I prefer to be called Gabi. I'm 27 years old and this is my second graduation. My previous university was in Brazil, my home country, and where I was born and lived until a month ago, my first program at university was Architecture and Urban Planning. I also did a post-graduate program in Interior Design.</p1>
-            <p2>I chose this program to find myself a little bit as a professional and because I thought I had some contact in the design field already, but nothing compares to this program because I was never in touch with either these software programs or design as a main product, just a section of design, and because of that, I'm here willing to learn.</p2>
-            
+        <p>My name is Gabriela, but I prefer to be called Gabi. I'm 27 years old and this is my second graduation. My previous university was in Brazil, my home country, and where I was born and lived until a month ago, my first program at university was Architecture and Urban Planning. I also did a post-graduate program in Interior Design.</p>
+        <p>I chose this program to find myself a little bit as a professional and because I thought I had some contact in the design field already, but nothing compares to this program because I was never in touch with either these software programs or design as a main product, just a section of design, and because of that, I'm here willing to learn.</p>
+        
     </article>
 </body>
 </html>
