--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -6,15 +6,21 @@
     <title>HTML Assignment</title>
 </head>
 <body>
+    <header>
     <h1>Gabriela Simoes</h1>
+    </header>
+    <main>
     <article>
         <h2>About Me</h2>
-        <p>My name is Gabriela, but I prefer to be called Gabi. I'm 27 years old and this is my second graduation. My previous university was in Brazil, my home country, and where I was born and lived until a month ago, my first program at university was Architecture and Urban Planning. I also did a post-graduate program in Interior Design.</p>
-        <p>I chose this program to find myself a little bit as a professional and because I thought I had some contact in the design field already, but nothing compares to this program because I was never in touch with either these software programs or design as a main product, just a section of design, and because of that, I'm here willing to learn.</p>
+        <p>My name is Gabriela, but I prefer to be called Gabi. I'm 27 years old and this is my second graduation. My 1<sup>st</sup> university was in <abbr title="Brazil">BR</abbr>, my home country, and where I was born and lived until a month ago, my first program at university was Architecture and Urban Planning. I also did a post-graduate program in Interior Design.</p>
+        <p>I chose this program <em>to find myself a little bit</em> as a professional and because I thought I had some contact in the design field already, but nothing compares to this program because I was never in touch with either these software programs or design as a main product, just a section of design, and because of that, <em>I'm here willing to learn.</em></p>
             <quote>
         "The eye is the lamp of the body. So, if your eye is healthy, your whole body will be full of light."
             </quote>
             <cite>(New Internacional Version, 2011, Matt. 6:22)</cite>
     </article>
+    </main>
+    <br>
+    <footer>Copyright by Gabriela Simoes</footer>
 </body>
 </html>
