trying add image

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -19,6 +19,10 @@
             </quote>
             <cite>(New Internacional Version, 2011, Matt. 6:22)</cite>
     </article>
+    <section>
+        <h2>Image</h2>
+        <img src="images/gabi-profilepicture" alt="Gabi's Picture"
+    </section>
     </main>
     <br>
     <footer>Copyright by Gabriela Simoes</footer>
