add ordered list hobbies

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -23,6 +23,13 @@
         <h2>Image</h2>
         <img src="image/gabi-profilepicture.JPG" alt="Gabi's Picture">
     </section>
+    <section>
+    <ol>
+        <h2>My Hobbies</h2>
+        <li>Writing about my feelings and experiences</li>
+        <li>Drinking wine while star gazing</li>
+    </ol>
+    </section>
     </main>
     <br>
     <footer>Copyright by Gabriela Simoes</footer>
