correcting mistakes on validator

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -14,21 +14,21 @@
         <h2>About Me</h2>
         <p>My name is Gabriela, but I prefer to be called Gabi. I'm 27 years old and this is my second graduation. My 1<sup>st</sup> university was in <abbr title="Brazil">BR</abbr>, my home country, and where I was born and lived until a month ago, my first program at university was Architecture and Urban Planning. I also did a post-graduate program in Interior Design.</p>
         <p>I chose this program <em>to find myself a little bit</em> as a professional and because I thought I had some contact in the design field already, but nothing compares to this program because I was never in touch with either these software programs or design as a main product, just a section of design, and because of that, <em>I'm here willing to learn.</em></p>
-            <quote>
+        <blockquote>
         "The eye is the lamp of the body. So, if your eye is healthy, your whole body will be full of light."
-            </quote>
-            <cite>(New Internacional Version, 2011, Matt. 6:22)</cite>
+        </blockquote>
+        <cite>(New Internacional Version, 2011, Matt. 6:22)</cite>
     </article>
     <section>
         <h2>Image</h2>
         <img src="image/gabi-profilepicture.JPG" alt="Gabi's Picture">
     </section>
     <section>
-    <ol>
         <h2>My Hobbies</h2>
+        <ol>
         <li>Writing about my feelings and experiences</li>
         <li>Drinking wine while star gazing</li>
-    </ol>
+        </ol>
     </section>
     </main>
     <br>
