add nav add a href for notes.html

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -30,6 +30,15 @@
         <li>Drinking wine while star gazing</li>
         </ol>
     </section>
+    <section>
+        <nav>
+            <ul>
+                <li>
+                    <a href="notes.html">New Page</a>
+                </li>
+            </ul>
+        </nav>
+    </section>
     </main>
     <br>
     <footer>Copyright by Gabriela Simoes</footer>
