add dl for html tags that we learnt

--- a/notes.html
+++ b/notes.html
@@ -14,5 +14,17 @@
             </li>
         </ul>
     </nav>
+    <dl>
+        <dt>ol</dt>
+        <dd>To create lists in order of numbers, called an ordered list</dd>
+        <dt>nav</dt>
+        <dd>Navegation tag it will have links to go to another page</dd>
+        <dt>p</dt>
+        <dd>For adding paragraphs with text content</dd>
+        <dt>blockquote</dt>
+        <dd>For a large quote from another person instead of yoursel</dd>
+        <dt>strong</dt>
+        <dd>Looks like a bold for regular text but here, which means highlighting important words or texts to emphasize</dd>
+    </dl>
 </body>
 </html>
