--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -21,7 +21,7 @@
     </article>
     <section>
         <h2>Image</h2>
-        <img src="image/gabi-profilepicture.JPG" alt="Gabi's Picture">
+        <img src="image/gabi-profilepicture.JPG" alt="Gabi's Picture" widtch="400" height="200">
     </section>
     <section>
         <h2>My Hobbies</h2>
