changed h2 for the picture

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -20,7 +20,7 @@
         <cite>(New Internacional Version, 2011, Matt. 6:22)</cite>
     </article>
     <section>
-        <h2>Image</h2>
+        <h2>More about me</h2>
         <img src="image/gabi-profilepicture.JPG" alt="Gabi's Picture" widtch="400" height="200">
     </section>
     <section>
