add class site-title and change the color of the heading

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <header>
-    <h1>Gabriela Simoes</h1>
-    <h1 class="grey"></h1>
+    <h1 class="site-title">Gabriela Simoes</h1>
     </header>
     <main>
     <article>
