id selector and box-shadow

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -22,7 +22,7 @@
     </article>
     <section>
         <h2>More about me</h2>
-        <img src="image/gabi-profilepicture.JPG" alt="Gabi's Picture" width="300" height="400">
+        <img id="my-image" src="image/gabi-profilepicture.JPG" alt="Gabi's Picture" width="300" height="400">
     </section>
     <section>
         <h2>My Hobbies</h2>
