--- a/midterm/index.html
+++ b/midterm/index.html
@@ -7,6 +7,7 @@
     <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-    
+    <!-- do comments explain what we are doing each part -->
+     
 </body>
 </html>
