header and site title

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <!-- do comments explain what we are doing each part -->
-     
+     <header>
+        <h1 class="site-title">Lone Starfish</h1>
+     </header>
 </body>
 </html>
