--- a/midterm/index.html
+++ b/midterm/index.html
@@ -10,6 +10,7 @@
     <!-- do comments explain what we are doing each part -->
      <header>
         <h1 class="site-title">Lone Starfish</h1>
+        <img src="images/lone-starfish-wide.jpg" alt="Lone Starfish Wide">
      </header>
 </body>
 </html>
