add class for page background and body for start css

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <!-- do comments explain what we are doing each part -->
-     <header>
-        <h1 class="site-title">Lone Starfish</h1>
-        <img src="images/lone-starfish-wide.jpg" alt="Lone Starfish Wide">
-     </header>
+    <!-- main structure for the website and I used wrapper for the page background -->
+    <div class="wrapper">
+    <!-- just to reminds me container is the blue rectangle in the midle of the page -->
+    <div class="container"> 
 </body>
 </html>
