add header for image and site title

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -11,6 +11,11 @@
     <!-- main structure for the website and I used wrapper for the page background -->
     <div class="wrapper">
     <!-- just to reminds me container is the blue rectangle in the midle of the page -->
-    <div class="container"> 
+    <div class="container">
+        <!--  -->
+        <header class="site-header" id="home">
+            <img class="wide-image" src="images/lone-starfish-wide.jpg" alt="Rectangle Image Wide of Starfish">
+            <h1 class="site-title">Lone Starfish</h1>
+        </header>
 </body>
 </html>
