add nav and design it

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -12,10 +12,17 @@
     <div class="wrapper">
     <!-- just to reminds me container is the blue rectangle in the midle of the page -->
     <div class="container">
-        <!--  -->
+        <!-- organizing first things for the website like site title and the top image of it -->
         <header class="site-header" id="home">
             <img class="wide-image" src="images/lone-starfish-wide.jpg" alt="Rectangle Image Wide of Starfish">
             <h1 class="site-title">Lone Starfish</h1>
+            <nav>
+                <ul>
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">STORY</a></li>
+                    <li><a href="#">CONTACT</a></li>
+                </ul>
+            </nav>
         </header>
 </body>
 </html>
