--- a/midterm/index.html
+++ b/midterm/index.html
@@ -12,17 +12,28 @@
     <div class="wrapper">
     <!-- just to reminds me container is the blue rectangle in the midle of the page -->
     <div class="container">
-        <!-- organizing first things for the website like site title and the top image of it -->
+        <!-- organizing first things for the website like site title and the top image of it, this is the foundation to design on css after -->
         <header class="site-header" id="home">
             <img class="wide-image" src="images/lone-starfish-wide.jpg" alt="Rectangle Image Wide of Starfish">
             <h1 class="site-title">Lone Starfish</h1>
             <nav>
                 <ul>
-                    <li><a href="#">HOME</a></li>
-                    <li><a href="#">STORY</a></li>
-                    <li><a href="#">CONTACT</a></li>
+                    <li><a href="#">home</a></li>
+                    <li><a href="#">story</a></li>
+                    <li><a href="#">contact</a></li>
                 </ul>
             </nav>
         </header>
+        <!-- using main tag to put the main content of the page inside of it -->
+        <main id="content">
+            <article id="story" class="story">
+                <h2 id="story-title">Life of a Starfish</h2>
+                <img class="story-image" src="images/lone-starfish.jpg" alt="Square picture of a starfish">
+                <p>
+                Swallower catla Black angelfish grunter striped bass scissor-tail rasbora; slender mola. Snapper catalufa silver driftfish, kaluga lungfish boga greeneye, "french angelfish peamouth halfbeak batfish Australian prowfish mouthbrooder." Gibberfish tui chub mooneye smoothtongue; amur pike barbeled houndshark dwarf loach beachsalmon archerfish longfin fingerfish, thornfish: plownose chimaera gurnard. Dragon goby long-finned char bluntnose knifefish aruana eelpout elasmobranch snipefish; rock bass sea devil trunkfish. Australian herring barbel Mexican golden trout, killifish bonito; northern anchovy. Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra. Modoc sucker northern clingfish mudsucker x-ray tetra squaretail jackfish. Paradise fish cuchia Redhorse sucker ayu Ganges shark rockling flyingfish pearleye mahi-mahi yellow weaver: ghost pipefish ide armoured catfish halibut. Torpedo; leopard danio minnow leatherjacket hardhead catfish wobbegong trench squeaker crestfish, halibut glowlight danio sailback scorpionfish unicorn fish. Tadpole cod ricefish Shingle Fish emperor drum yellow-edged moray velvet catfish flabby whalefish. Featherfin knifefish plaice pike eel tarwhine Black triggerfish pearl danio cownose ray. Merluccid hake, platy peamouth humuhumunukunukuapua'a barred danio. Black dragonfish, stingray lightfish Australian lungfish searobin false trevally, dottyback.</p>
+            </article>
+        </main>
+    </div>
+    </div>
 </body>
 </html>
