--- a/midterm/index.html
+++ b/midterm/index.html
@@ -42,6 +42,51 @@
                     <li>Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.</li>
                 </ul>
             </section>
+            <!-- I gonna do another section to separate topics, now I'm doing forms so i need another section to organize things as I said -->
+             <section id="contact" class="contact">
+                <h2 id="contact-title">Contact to learn more</h2>
+                <div class="form">
+                <div class="form-row">
+                    <label for="name">Your Name</label>
+                    <div>
+                    <input id="name" name="name" type="text" autocomplete="name" required>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <label for="email">Your Email</label>
+                    <div>
+                    <input id="email" name="email" type="email" autocomplete="email" required>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <label for="message">Your Message</label>
+                    <div>
+                    <textarea id="message" name="message" rows="6" required></textarea>
+                    </div>
+                    <!-- I used div a lot to separate things in "lines" -->
+                </div>
+                <h3>Would you like to visit the starfish?</h3>
+                <label>
+                    Yes
+                    <input type="radio" name="visit" value="yes">
+                </label>
+                <label>
+                    No
+                    <input type="radio" name="visit" value="no">
+                </label>
+                <label>
+                    Maybe
+                    <input type="radio" name="visit" value="maybe">
+                </label>
+                <!-- if I didn't do div for this case, the button supposed to be beside, so I use div to put the button under -->
+                <div>
+                <button class="button" type="submit">Send</button>
+                </div>
+                </div>
+                <footer>
+                    <p class="footerside">© Lone Starfish.</p>
+                </footer>
+             </section>
         </main>
     </div>
     </div>
