remove the white background color for send button

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -84,6 +84,7 @@
                 </div>
                 </div>
                 <footer>
+                    <!-- I did class as footerside to reminds me what I did on css, because I needed to put the footer on the right side of the page -->
                     <p class="footerside">© Lone Starfish.</p>
                 </footer>
              </section>
