--- a/final-project/index.html
+++ b/final-project/index.html
@@ -7,6 +7,21 @@
     <title>Final Project</title>
 </head>
 <body>
-    
+    <!-- beginning top of the page, main info at the top -->
+    <header>
+        <div class="site-header">
+            <!-- adding the logo image because that has to be at the top and left after in css -->
+            <img src="images/logo.png" alt="Three Star Media logo">
+            <nav>
+                <ul>
+                    <li><a href="home">Home</a></li>
+                    <li><a href="about">About Us</a></li>
+                    <li><a href="services">Services</a></li>
+                    <li><a href="team">Team</a></li>
+                    <li><a href="contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 </body>
 </html>
