--- a/final-project/index.html
+++ b/final-project/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
+    <!-- add search icon -->
+     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=search" />
     <title>Final Project</title>
 </head>
 <body>
@@ -12,6 +14,7 @@
         <div class="site-header">
             <!-- adding the logo image because that has to be at the top and left after in css -->
             <img src="images/logo.png" alt="Three Star Media logo">
+            <!-- add navigation for the pages inside the website -->
             <nav>
                 <ul>
                     <li><a href="home">Home</a></li>
@@ -20,6 +23,9 @@
                     <li><a href="team">Team</a></li>
                     <li><a href="contact">Contact</a></li>
                 </ul>
+                <label for="search"></label>
+                <input type="search" id="search" name="search" placeholder="Search">
+                <span class="material-symbols-outlined">search</span>
             </nav>
         </div>
     </header>
