--- a/final-project/index.html
+++ b/final-project/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="css/main.css">
     <!-- add search icon -->
      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=search" />
+     <!-- add arrow right for the buttons -->
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=arrow_right" />
     <title>Final Project</title>
 </head>
 <body>
@@ -23,11 +25,26 @@
                     <li><a href="team">Team</a></li>
                     <li><a href="contact">Contact</a></li>
                 </ul>
+                <!-- add search tab and the icon for it. should be a button? -->
                 <label for="search"></label>
                 <input type="search" id="search" name="search" placeholder="Search">
                 <span class="material-symbols-outlined">search</span>
             </nav>
         </div>
     </header>
+    <!-- adding sections along the page which will contain mais contents for the website -->
+    <main>
+        <section id="welcome">
+            <img src="images/main-banner.jpg" alt="The office with chairs and table">
+            <!-- class for the main title of the page -->
+            <div class="titletext">
+                <h1>Welcome to Three Star Media</h1>
+                <!-- paragraph for lorem behind the title -->
+                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At harum perspiciatis aperiam molestias reiciendis sapiente dignissimos id vel dolores qui exercitationem sunt a laborum veritatis atque, quo earum maxime illum.</p>
+                 <a href="connect">Connect with us</a>
+                 <span class="material-symbols-outlined">arrow_right</span>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
