about us section with image, title and text lorem paragraph

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -34,6 +34,7 @@
     </header>
     <!-- adding sections along the page which will contain mais contents for the website -->
     <main>
+        <!-- welcome section for the webpage -->
         <section id="welcome">
             <img src="images/main-banner.jpg" alt="The office with chairs and table">
             <!-- class for the main title of the page -->
@@ -41,8 +42,20 @@
                 <h1>Welcome to Three Star Media</h1>
                 <!-- paragraph for lorem behind the title -->
                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At harum perspiciatis aperiam molestias reiciendis sapiente dignissimos id vel dolores qui exercitationem sunt a laborum veritatis atque, quo earum maxime illum.</p>
+                 <!-- this is a future button -->
                  <a href="connect">Connect with us</a>
                  <span class="material-symbols-outlined">arrow_right</span>
+            </div>
+        </section>
+        <!-- doing the about us section of the website -->
+        <section id="about">
+            <div class="about-image">
+                <img src="images/about-us.jpg" alt="Ping pong table">
+            </div>
+            <div class="about-text">
+                <h2>About Us</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem doloremque doloribus delectus voluptatum numquam? Tempore nesciunt deserunt adipisci placeat neque aperiam est aspernatur totam eos laborum, vel odio quidem sed?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam iure error aliquam molestias iste perspiciatis aspernatur, quod delectus corrupti cumque facilis provident id earum sunt. Numquam sint modi cum at.</p>
             </div>
         </section>
     </main>
