our services section and digital transformation

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -58,6 +58,21 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam iure error aliquam molestias iste perspiciatis aspernatur, quod delectus corrupti cumque facilis provident id earum sunt. Numquam sint modi cum at.</p>
             </div>
         </section>
+        <!-- Our Services section with image, text, paragraph and also a future button with right arrow -->
+         <section id="services">
+            <h2>Our Services</h2>
+            <article class="service">
+                <img src="images/digital.jpg" alt="Person using a pc and phone in a table">
+                <!-- now i am doing class for each topic inside the Our Services -->
+                 <!-- 1st: digita transformation -->
+                <div class="service-digital">
+                    <h3>Digital Tansformation</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis, accusantium minima. Dolores veniam facilis provident minus necessitatibus neque repellendus tempore libero adipisci odit iure laborum in, nostrum est accusantium quidem?</p>
+                    <a href="digitalbutton">Digital Plans</a>
+                    <span class="material-symbols-outlined">arrow_right</span>
+                </div>
+            </article>
+         </section>
     </main>
 </body>
 </html>
