marketing section for our services

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
     <!-- add search icon -->
-     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=search" />
+     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=search">
      <!-- add arrow right for the buttons -->
-      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=arrow_right" />
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=arrow_right">
     <title>Final Project</title>
 </head>
 <body>
@@ -61,16 +61,26 @@
         <!-- Our Services section with image, text, paragraph and also a future button with right arrow -->
          <section id="services">
             <h2>Our Services</h2>
-            <article class="service">
+            <article class="service1">
                 <img src="images/digital.jpg" alt="Person using a pc and phone in a table">
                 <!-- now i am doing class for each topic inside the Our Services -->
-                 <!-- 1st: digita transformation -->
+                 <!-- 1st: digital transformation -->
                 <div class="service-digital">
                     <h3>Digital Tansformation</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis, accusantium minima. Dolores veniam facilis provident minus necessitatibus neque repellendus tempore libero adipisci odit iure laborum in, nostrum est accusantium quidem?</p>
                     <a href="digitalbutton">Digital Plans</a>
                     <span class="material-symbols-outlined">arrow_right</span>
                 </div>
+            </article>
+            <article class="service2">
+                <img src="images/marketing.jpg" alt="Computer with graphics">
+                <!-- 2nd: marketing -->
+                 <div class="service-marketing">
+                    <h3>Marketing</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore quidem minima, laudantium quos nemo fugiat expedita distinctio tenetur libero eaque reiciendis sunt explicabo dolor cum quia, quisquam minus, nulla commodi.</p>
+                    <a href="marketingbutton">Marketing Plans</a>
+                    <span class="material-symbols-outlined">arrow_right</span>
+                 </div>
             </article>
          </section>
     </main>
