video production part of our services

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -74,11 +74,21 @@
             </article>
             <article class="service2">
                 <img src="images/marketing.jpg" alt="Computer with graphics">
-                <!-- 2nd: marketing -->
+                <!-- 2nd: Marketing -->
                  <div class="service-marketing">
                     <h3>Marketing</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore quidem minima, laudantium quos nemo fugiat expedita distinctio tenetur libero eaque reiciendis sunt explicabo dolor cum quia, quisquam minus, nulla commodi.</p>
                     <a href="marketingbutton">Marketing Plans</a>
+                    <span class="material-symbols-outlined">arrow_right</span>
+                 </div>
+            </article>
+            <article class="service3">
+                <img src="images/video.jpg" alt="Phone with youtube icon">
+                <!-- 3rd: Video Production -->
+                 <div class="service-video">
+                    <h3>Video Production</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In dolore itaque illo, suscipit voluptatum harum pariatur ad? Consequatur dolorum nemo repudiandae ea, aperiam odit adipisci eos iure odio quis voluptatem!</p>
+                    <a href="videobutton">Video Plans</a>
                     <span class="material-symbols-outlined">arrow_right</span>
                  </div>
             </article>
