web development part of our services

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -92,6 +92,16 @@
                     <span class="material-symbols-outlined">arrow_right</span>
                  </div>
             </article>
+            <article class="service4">
+                <img src="images/web.jpg" alt="Notebook with phone">
+                <!-- 4th: Web development -->
+                 <div class="service-web">
+                    <h3>Web Development</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe facilis mollitia ullam! Suscipit, id? Ipsam necessitatibus, numquam cum, dignissimos laudantium vero praesentium ex, hic fuga rerum beatae tenetur omnis laboriosam.</p>
+                    <a href="webbutton">Web Plans</a>
+                    <span class="material-symbols-outlined">arrow_right</span>
+                 </div>
+            </article>
          </section>
     </main>
 </body>
