add print part of our services

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -102,6 +102,16 @@
                     <span class="material-symbols-outlined">arrow_right</span>
                  </div>
             </article>
+            <article class="service5">
+                <img src="images/print.jpg" alt="Garbage can in the sidewalk">
+                <!-- 5th: Print -->
+                 <div class="service-print">
+                    <h3>Print</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates suscipit nam consequuntur voluptatem, illum exercitationem ex, illo at hic id consectetur eligendi aperiam beatae quisquam nisi, assumenda iste placeat ea.</p>
+                    <a href="printbutton">Print Plans</a>
+                    <span class="material-symbols-outlined">arrow_right</span>
+                 </div>
+            </article>
          </section>
     </main>
 </body>
