Our Vision section and Our Team section with article for both team members John and Bob

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -93,7 +93,7 @@
                  </div>
             </article>
             <article class="service4">
-                <img src="images/web.jpg" alt="Notebook with phone">
+                <img src="images/web.jpg" alt="Notebook with a black phone logged on instagram sign up page and a black pen next to the phone">
                 <!-- 4th: Web development -->
                  <div class="service-web">
                     <h3>Web Development</h3>
@@ -103,7 +103,7 @@
                  </div>
             </article>
             <article class="service5">
-                <img src="images/print.jpg" alt="Garbage can in the sidewalk">
+                <img src="images/print.jpg" alt="Colourful paper boxes in a sidewalk">
                 <!-- 5th: Print -->
                  <div class="service-print">
                     <h3>Print</h3>
@@ -113,6 +113,36 @@
                  </div>
             </article>
          </section>
+         <section id="vision">
+            <img src="images/vision.jpg" alt="Paper boats on a blue background">
+            <div class="vision-text">
+                <h2>Our Vision</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non sint harum consequatur laudantium blanditiis consequuntur ut quo tempore distinctio ipsum nam odio, repudiandae accusantium omnis exercitationem doloremque corporis vel aperiam.</p>
+                <a href="visionbutton">Learn More</a>
+                <span class="material-symbols-outlined">arrow_right</span>
+            </div>
+         </section>
+         <!-- Our Team section and then 2 articles for the CEOs -->
+          <section id="team">
+            <h2>Our Team</h2>
+            <!-- 1st team member called John -->
+            <article class="team-member1">
+                <img src="images/john.jpg" alt="A portrait of the 1st member called John Doe standing in front of a graffiti wall">
+                <div class="member1-content">
+                    <h3>John Doe</h3>
+                    <p>CEO and Co-owner</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur corporis nulla earum corrupti sed cum obcaecati, sit qui assumenda id in nesciunt eius nemo eum ab sequi sunt accusamus laboriosam!</p>
+                </div>
+            </article>
+            <article class="team-member2">
+                <img src="images/bob.jpg" alt="A portrait of the 2nd member called Bob Rite seating in front of a brick wall with a palm plant on the right side">
+                <div class="member2-content">
+                    <h3>Bob Rite</h3>
+                    <p>CEO and Co-owner</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati fuga soluta culpa beatae impedit? Eaque exercitationem commodi cupiditate. Optio cumque voluptate voluptatum quidem quod alias ut, enim voluptates maiores reprehenderit.</p>
+                </div>
+            </article>
+          </section>
     </main>
 </body>
 </html>
