section for contact us and div for each row of the contact

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -134,6 +134,7 @@
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur corporis nulla earum corrupti sed cum obcaecati, sit qui assumenda id in nesciunt eius nemo eum ab sequi sunt accusamus laboriosam!</p>
                 </div>
             </article>
+            <!-- 2nd team member called Bob -->
             <article class="team-member2">
                 <img src="images/bob.jpg" alt="A portrait of the 2nd member called Bob Rite seating in front of a brick wall with a palm plant on the right side">
                 <div class="member2-content">
@@ -142,6 +143,26 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati fuga soluta culpa beatae impedit? Eaque exercitationem commodi cupiditate. Optio cumque voluptate voluptatum quidem quod alias ut, enim voluptates maiores reprehenderit.</p>
                 </div>
             </article>
+          </section>
+          <!-- New section for Contact Us part -->
+          <section id="contact" class="contact">
+            <h2 id="contact-title">Contact Us</h2>
+            <h3 id="contact-message">Send us a message</h3>
+            <div class="form">
+                <div class="form-row1">
+                    <label for="full-name">Full Name</label>
+                    <input type="text" name="full-name" id="full-name">
+                </div>
+                <div class="form-row2">
+                    <label for="email">Email</label>
+                    <input type="email" name="email" id="email">
+                </div>
+                <div class="form-row3">
+                    <label for="message">Message</label>
+                    <textarea name="message" id="message"></textarea>
+                </div>
+                <button type="submit">Send</button>
+            </div>
           </section>
     </main>
 </body>
