--- a/final-project/index.html
+++ b/final-project/index.html
@@ -164,6 +164,28 @@
                 <button type="submit">Send</button>
             </div>
           </section>
+          <!-- New section for Hours of Operation which is a table-->
+           <section id="hours" class="hours">
+            <h3 id="hoursofoperation">Hours of operation</h3>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Days</th>
+                        <th>Hours</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Monday - Friday</td>
+                        <td>9 AM - 6 PM</td>
+                    </tr>
+                    <tr>
+                        <td>Saturday - Sunday</td>
+                        <td>Closed</td>
+                    </tr>
+                </tbody>
+            </table>
+           </section>
     </main>
 </body>
 </html>
