--- a/final-project/index.html
+++ b/final-project/index.html
@@ -192,5 +192,12 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5607.900720523665!2d-75.75533349999999!3d45.3498143!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0718cc4a6ad7%3A0xc6cc467725843e2b!2sAlgonquin%20College!5e0!3m2!1spt-BR!2sca!4v1764280454676!5m2!1spt-BR!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
            </section>
     </main>
+    <!-- footer of the webpage and a navigation for Unsplash -->
+    <footer>
+        <p>&copy; Copyright Three Star Media, 2020</p>
+        <p>All images are taken from
+            <a href="https://unsplash.com/" target="_blank">Unsplash</a>
+        </p>
+    </footer>
 </body>
 </html>
