double check and fix html before to start css again

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -28,22 +28,23 @@
                     <li><a href="contact">Contact</a></li>
                 </ul>
                 <!-- add search tab and the icon for it. should be a button? -->
-                <div class="searchbar">
+                 <form action="#" method="get" class="site-search">
+                    <label for="search">Search</label>
                 <input type="search" id="search" name="search" placeholder="Search">
                 <button type="submit" class="search-icon">
                     <span class="material-symbols-outlined">search</span>
                 </button>
-                </div>
+                 </form>
             </nav>
-        </div>
     </header>
+
     <!-- adding sections along the page which will contain mais contents for the website -->
     <main>
         <!-- welcome section for the webpage -->
         <section id="welcome">
             <img src="images/main-banner.jpg" alt="The office with chairs and table">
             <!-- class for the main title of the page -->
-            <div class="titletext">
+            <div class="welcome-text">
                 <h1>Welcome to Three Star Media</h1>
                 <!-- paragraph for lorem behind the title -->
                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At harum perspiciatis aperiam molestias reiciendis sapiente dignissimos id vel dolores qui exercitationem sunt a laborum veritatis atque, quo earum maxime illum.</p>
@@ -51,6 +52,7 @@
                  <a href="connect" class="buttonarrow">Connect with us <span class="material-symbols-outlined">arrow_right</span></a>
             </div>
         </section>
+
         <!-- doing the about us section of the website -->
         <section id="about">
             <div class="about-image">
@@ -62,9 +64,11 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam iure error aliquam molestias iste perspiciatis aspernatur, quod delectus corrupti cumque facilis provident id earum sunt. Numquam sint modi cum at.</p>
             </div>
         </section>
+
         <!-- Our Services section with image, text, paragraph and also a future button with right arrow -->
          <section id="services">
             <h2>Our Services</h2>
+
             <article class="service1">
                 <img src="images/digital.jpg" alt="Person using a pc and phone in a table">
                 <!-- now i am doing class for each topic inside the Our Services -->
@@ -72,60 +76,60 @@
                 <div class="service-digital">
                     <h3>Digital Tansformation</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis, accusantium minima. Dolores veniam facilis provident minus necessitatibus neque repellendus tempore libero adipisci odit iure laborum in, nostrum est accusantium quidem?</p>
-                    <a href="digitalbutton">Digital Plans</a>
-                    <span class="material-symbols-outlined">arrow_right</span>
+                    <a href="digitalbutton">Digital Plans <span class="material-symbols-outlined">arrow_right</span></a>
                 </div>
             </article>
+
             <article class="service2">
                 <img src="images/marketing.jpg" alt="Computer with graphics">
                 <!-- 2nd: Marketing -->
                  <div class="service-marketing">
                     <h3>Marketing</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore quidem minima, laudantium quos nemo fugiat expedita distinctio tenetur libero eaque reiciendis sunt explicabo dolor cum quia, quisquam minus, nulla commodi.</p>
-                    <a href="marketingbutton">Marketing Plans</a>
-                    <span class="material-symbols-outlined">arrow_right</span>
+                    <a href="marketingbutton">Marketing Plans <span class="material-symbols-outlined">arrow_right</span></a>
                  </div>
             </article>
+
             <article class="service3">
                 <img src="images/video.jpg" alt="Phone with youtube icon">
                 <!-- 3rd: Video Production -->
                  <div class="service-video">
                     <h3>Video Production</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In dolore itaque illo, suscipit voluptatum harum pariatur ad? Consequatur dolorum nemo repudiandae ea, aperiam odit adipisci eos iure odio quis voluptatem!</p>
-                    <a href="videobutton">Video Plans</a>
-                    <span class="material-symbols-outlined">arrow_right</span>
+                    <a href="videobutton">Video Plans <span class="material-symbols-outlined">arrow_right</span></a>
                  </div>
             </article>
+
             <article class="service4">
                 <img src="images/web.jpg" alt="Notebook with a black phone logged on instagram sign up page and a black pen next to the phone">
                 <!-- 4th: Web development -->
                  <div class="service-web">
                     <h3>Web Development</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe facilis mollitia ullam! Suscipit, id? Ipsam necessitatibus, numquam cum, dignissimos laudantium vero praesentium ex, hic fuga rerum beatae tenetur omnis laboriosam.</p>
-                    <a href="webbutton">Web Plans</a>
-                    <span class="material-symbols-outlined">arrow_right</span>
+                    <a href="webbutton">Web Plans <span class="material-symbols-outlined">arrow_right</span></a>
                  </div>
             </article>
+
             <article class="service5">
                 <img src="images/print.jpg" alt="Colourful paper boxes in a sidewalk">
                 <!-- 5th: Print -->
                  <div class="service-print">
                     <h3>Print</h3>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates suscipit nam consequuntur voluptatem, illum exercitationem ex, illo at hic id consectetur eligendi aperiam beatae quisquam nisi, assumenda iste placeat ea.</p>
-                    <a href="printbutton">Print Plans</a>
-                    <span class="material-symbols-outlined">arrow_right</span>
+                    <a href="printbutton">Print Plans <span class="material-symbols-outlined">arrow_right</span></a>
                  </div>
             </article>
          </section>
+
          <section id="vision">
             <img src="images/vision.jpg" alt="Paper boats on a blue background">
             <div class="vision-text">
                 <h2>Our Vision</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non sint harum consequatur laudantium blanditiis consequuntur ut quo tempore distinctio ipsum nam odio, repudiandae accusantium omnis exercitationem doloremque corporis vel aperiam.</p>
-                <a href="visionbutton">Learn More</a>
-                <span class="material-symbols-outlined">arrow_right</span>
+                <a href="visionbutton">Learn More <span class="material-symbols-outlined">arrow_right</span></a>
             </div>
          </section>
+
          <!-- Our Team section and then 2 articles for the CEOs -->
           <section id="team">
             <h2>Our Team</h2>
@@ -138,6 +142,7 @@
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur corporis nulla earum corrupti sed cum obcaecati, sit qui assumenda id in nesciunt eius nemo eum ab sequi sunt accusamus laboriosam!</p>
                 </div>
             </article>
+
             <!-- 2nd team member called Bob -->
             <article class="team-member2">
                 <img src="images/bob.jpg" alt="A portrait of the 2nd member called Bob Rite seating in front of a brick wall with a palm plant on the right side">
@@ -171,7 +176,7 @@
                 </div>
                 <button type="submit">Send</button>
             </form>
-          </section>
+            </section>
 
           <!-- New section for Hours of Operation which is a table-->
            <section id="hours" class="hours">
@@ -195,12 +200,14 @@
                 </tbody>
             </table>
            </section>
+
            <!-- New section for location and the link of the map -->
            <section id="location">
             <h3>Location</h3>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5607.900720523665!2d-75.75533349999999!3d45.3498143!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0718cc4a6ad7%3A0xc6cc467725843e2b!2sAlgonquin%20College!5e0!3m2!1spt-BR!2sca!4v1764280454676!5m2!1spt-BR!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
            </section>
     </main>
+    
     <!-- footer of the webpage and a navigation for Unsplash -->
     <footer>
         <p>&copy; Copyright Three Star Media, 2020</p>
