body, header, nav and search part

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -29,7 +29,7 @@
                 </ul>
                 <!-- add search tab and the icon for it. should be a button? -->
                  <form action="#" method="get" class="site-search">
-                    <label for="search">Search</label>
+                    <!-- <label for="search" >Search</label> -->
                 <input type="search" id="search" name="search" placeholder="Search">
                 <button type="submit" class="search-icon">
                     <span class="material-symbols-outlined">search</span>
