media query for head, nav, search and welcome part also add a container in html to add the max width of the container wich is 1200px

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -13,11 +13,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="container">
     <!-- beginning top of the page, main info at the top -->
     <header>
         <div class="site-header">
             <!-- adding the logo image because that has to be at the top and left after in css -->
             <img src="images/logo.png" alt="Three Star Media logo">
+        </div>
             <!-- add navigation for the pages inside the website -->
             <nav>
                 <ul>
@@ -37,7 +39,6 @@
                  </form>
             </nav>
     </header>
-
     <!-- adding sections along the page which will contain mais contents for the website -->
     <main>
         <!-- welcome section for the webpage -->
@@ -215,5 +216,6 @@
             <a href="https://unsplash.com/" target="_blank">Unsplash</a>
         </p>
     </footer>
+    </div>
 </body>
 </html>
